Rework nav bar, add a flavicon, add .css code for html and nav

--- a/education.html
+++ b/education.html
@@ -14,15 +14,14 @@
     </head>
     <body>
         <header>
-            <nav>
-                <ul class="navigation">
-                    <li><a href="index.html"><span>Home</span></a></li>
-                    <li><a href="about.html"><span>About me</span></a></li>
-                    <li><a href="education.html"><span>Education</span></a></li>
-                    <li><a href="experience.html"><span>Experience</span></a></li>
-                    <li><a href="projects.html"><span>Projects</span></a></li>
-                </ul>
-            </nav>
+            <div class="navigation">
+                <a href="index.html" class="navItem"><span>Home</span></a>
+                <a href="about.html" class="navItem"><span>About me</span></a>
+                <a href="education.html" class="navItem"><span>Education</span></a>
+                <a href="experience.html" class="navItem"><span>Experience</span></a>
+                <a href="projects.html" class="navItem"><span>Projects</span></a>
+            </div>
+            
         </header>
         <main>
             <h1>This area is still under construction</h1>
