--- a/education.html
+++ b/education.html
@@ -11,6 +11,7 @@
         <title>Education</title>
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css" />
         <link type="text/css" href="styles/style.css" rel="stylesheet" />
+        <link rel="icon" href="images/favicon/icons8-portfolio-64(2).png" type="image/x-icon">
     </head>
     <body>
         <header>
@@ -24,9 +25,9 @@
             
         </header>
         <main>
-            <h1>This area is still under construction</h1>
+            <h1>Education</h1>
 
-            <div>
+            <div class="colleges">
                 <section>
                     <h2>Computer Science B.A.</h2>
                     <h3>Southern Adventist University</h3>
@@ -54,7 +55,55 @@
                     </p>
                 </section>
             </div>
+            <h1>Certifications</h1>
+            <div class="certifications">
+                <section class="individualCert">
+                    <img class="certImg" src="images/comptia/Aplus Logo Certified CE.png" alt="A+ Logo Certified CE picture">
+                    <h2>CompTia A+</h2>
+                    <p>
+                        Certification number:
+                        Certification dates:
+                    </p>
+                </section>
+                <section class="individualCert">
+                    <img class="certImg" src="images/comptia/ServerPlus Logo Certified.png" alt="Server+ Logo Certified picture">
+                    <h2>CompTia Server+</h2>
+                    <p>
+                        Certification number:
+                        Certification dates:
+                    </p>
+                </section>
+                <section class="individualCert">
+                    <img class="certImgSmall" src="images/comptia/Linux+ ce certified logo.png" alt="Linux+ Logo Certified picture">
+                    <h2>CompTia Linux+</h2>
+                    <p>
+                        Certification number:
+                        Certification dates:
+                    </p>
+                </section>
+                <section class="individualCert">
+                    <img class="certImg" src="images/comptia/SecurityPlus Logo Certified CE.png" alt="Security+ Logo Certified CE picture">
+                    <h2>CompTia Security+</h2>
+                    <p>
+                        Certification number:
+                        Certification dates:
+                    </p>
+                </section>
+                <section class="individualCert">
+                    <img class="certImgSmall" src="images/comptia/CySA+ce certified logo.png" alt="CySA+ Logo Certified picture">
+                    <h2>CompTia CySA+</h2>
+                    <p>
+                        Certification number:
+                        Certification dates:
+                    </p>
+                </section>
+            </div>
         </main>
-        <footer class="updateFooter">Updated 01/04/2024</footer>
+        <footer class="updateFooter">
+            <p>
+                Updated 02/05/2024 
+            </p>
+            <a target="_blank" href="https://icons8.com/icon/NYdlaAE3JYK1/portfolio">Portfolio</a> icon by <a target="_blank" href="https://icons8.com">Icons8</a>
+        </footer>
     </body>
 </html>
