--- a/projects.html
+++ b/projects.html
@@ -10,6 +10,7 @@
         <title>Projects</title>
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css" />
         <link type="text/css" href="styles/style.css" rel="stylesheet" />
+        <link rel="icon" href="images/favicon/icons8-portfolio-64(2).png" type="image/x-icon">
     </head>
     <body>
         <header>
@@ -28,6 +29,11 @@
                 
             </div>
         </main>
-        <footer class="updateFooter">Updated 01/04/2024</footer>
+        <footer class="updateFooter">
+            <p>
+                Updated 02/05/2024 
+            </p>
+            <a target="_blank" href="https://icons8.com/icon/NYdlaAE3JYK1/portfolio">Portfolio</a> icon by <a target="_blank" href="https://icons8.com">Icons8</a>
+        </footer>
     </body>
 </html>
