add style to index, education, and experience pages.  Add actions to the nav bar. Adding volenteer section to experience page. Reorganizing the style.css page for easer moding and adding code.

--- a/about.html
+++ b/about.html
@@ -27,6 +27,11 @@
             <h1>About Me</h1>
             <!-- this is about me -->
             <section>
+
+                <!--  -->
+                <!-- add a flexbox to make text more vertical and less wide -->
+                <!--  -->
+                
                 <h2>Synopsis</h2>
                 <p>
                     I currently hold an AS in Information Technology with an emphasis in Cybersecurity. I have experience working at my college's help desk, in the IT department as both a volunteer and a student assistant. In addition to my proficiency as IT support I am skilled at problem solving and providing excellent customer service. My greatest learning experience however was as a surge laborer for Dell in their Cheyenne, WY data center. I have a passion for technology and love to learn. I love helping others with their computing problems as well as keeping my computing skills up to date. I have a passion for learning new technologies and learning new ways to solve problems.
