--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             </div>
                 <div>
                     <a href="education.html">
-                        <h3>I hold a degree in Cybersecurity</h3>
+                        <h3>Cybersecurity Certifications</h3>
                     </a>
                 </div>
                 
